--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^6.0.0-rc.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -40,19 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-typescript": "^11.1.1",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
     "eslint-plugin-react": "^7.32.2",
-    "gh-pages": "^5.0.0",
-    "jest-styled-components": "^7.1.1",
-    "rollup": "^3.25.1",
-    "rollup-plugin-dts": "^5.3.0"
+    "gh-pages": "^5.0.0"
   },
   "homepage": "https://tiagotvc.github.io"
 }
